# cy-root

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
cyroot/: __init__.pxd  __init__.py  _check_args.cpp  _check_args.pxd  _check_args.py  _check_args.pyx  _cython_extension.py  _defaults.c  _defaults.cpp  _defaults.h  _defaults.pxd  _defaults.py  _defaults.pyx  _return_types.py  _scalar_root.py  _types.py  _version.py  bracketing.cpp  bracketing.pyx  fptr.cpp  fptr.pxd  fptr.pyx  newton.cpp  newton.pyx  quasi_newton.cpp  quasi_newton.pyx  return_types.cpp  return_types.pxd  return_types.pyx  scalar_bracketing.cpp  scalar_bracketing.pyx  scalar_derivative_approximation.cpp  scalar_derivative_approximation.pxd  scalar_derivative_approximation.pyx  scalar_newton.cpp  scalar_newton.pyx  scalar_quasi_newton.cpp  scalar_quasi_newton.pyx  scalar_root.py  vector_bracketing.cpp  (+9 more)
cyroot/ops/: matrix_ops.cpp  matrix_ops.pxd  matrix_ops.pyx  scalar_ops.cpp  scalar_ops.pxd  scalar_ops.pyx  vector_ops.cpp  vector_ops.pxd  vector_ops.pyx
cyroot/typing/: __init__.py  _array_like.py
cyroot/utils/: __init__.py  _function_registering.py  _function_registering.pyi  _warnings.py  array_ops.cpp  array_ops.pxd  array_ops.pyx  decorators.py  dynamic_default_args.cpp  dynamic_default_args.py  dynamic_default_args.pyx  event.py  format_dict.py  function_tagging.py  function_tagging.pyi  itertools.cpp  itertools.pxd  itertools.pyx  namedtuple.py  scalar_ops.c  scalar_ops.cpp  scalar_ops.pxd  scalar_ops.pyx  setter_property.py  vector_ops.cpp  vector_ops.pxd  vector_ops.pyx
examples/: scalar_root.py  vector_root.py
examples/utils/: __init__.py  time_meter.py
