[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
    "dynamic-default-args",
    "numpy",
    "scipy",
    "sympy",
]

[tool.cibuildwheel]
build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
archs = ["auto64"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y lapack-devel",
    "yum install -y blas-devel",
]
