[metadata]
name = cy-root
description = Cython implementations of multiple root-finding methods.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/cy-root
download_urls = https://pypi.org/project/cy-root
project_urls =
    Source = https://github.com/inspiros/cy-root
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Cython
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
keywords = root-finding

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires = dynamic_default_args; numpy; sympy
install_requires = dynamic_default_args; numpy; sympy

[options.extras_require]
dev = cython; pyximport
examples = tqdm

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* = *.pyx, *.pxd, *.h, *.c, *.
